--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
   }
   .container {
     background-color: #ffffff;
-    width: 80vw;
+    width: 95%;
     max-width: 37.5em;
     padding: 3em 2.5em;
     position: absolute;
