--- a/style.css
+++ b/style.css
@@ -123,3 +123,8 @@
     margin: 20px;
     
   }
+ @media only screen and (max-width: 405px){
+    .search-wrapper button {
+      padding: 0.5em 0.5em;
+    }
+}
